--- a/autor.html
+++ b/autor.html
@@ -10,7 +10,9 @@
         
     <h1>Sobre o Autor</h1>
 
-    <p>Meu nome é Rafael</p>
+    <p>Meu nome é Rafael...</p>
+
+    <a href="index.html">Index</a>
 
 </body>
 </html>
