inserindo logo na index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Aprendendo - Git</h1>
     <h2>Alterando</h2>
 
+    <img src="img/thresh.jpg">
 
     <a href="autor.html">Autor</a>
     <script>
