--- a/home.html
+++ b/home.html
@@ -11,11 +11,17 @@
     <h1>Aprendendo - Git</h1>
     <h2>Alterando</h2>
 
+    <ul>
+        <li>Curso de Git</li>
+        <li>Curso de HTML</li>
+    </ul>
+    <hr>
+
     <img src="img/thresh.jpg">
 
     <a href="autor.html">Autor</a>
     <script>
-        alert("Rafael")
+        console.log("Rafael")
     </script>
     
 </body>
